--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clsx": "^2.1.1",
     "firebase": "^12.6.0",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
